--- a/helo.html
+++ b/helo.html
@@ -1,1 +1,10 @@
-
+<<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>sger</title>
+</head>
+<body>
+<h2>Hello Im Digitox</h2>
+</body>
+</html>
